[ChatbotSample] Bump to version 0.0.2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.softbankrobotics.chatbotsample"
         minSdkVersion 23
         targetSdkVersion 27
-        versionCode 1
-        versionName "0.0.1.improve"
+        versionCode 2
+        versionName "0.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         // CHATBOT_SAMPLE_DIALOGFLOW_TOKEN is kept out of version control (typically in your
