wip changing home layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     // Dialogflow v1
     implementation 'ai.api:libai:1.6.12'
 
+    implementation 'com.android.support:design:27.1.1'
 }
